# ros_kf_stack

./: .gitignore  README.md  Special_Notes
PID_Class/: PID.cpp  pid.cpp  pid.h
axis_exposure_control/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
axis_exposure_control/launch/: axis_exposure_control.launch
axis_exposure_control/src/: axis_exposure_control.cpp
gngt_shore_tracking/: CMakeLists.txt  mainpage.dox  manifest.xml
gngt_shore_tracking/launch/: gngt_shore_tracking.launch
gngt_shore_tracking/src/: gngt_shore_tracking.cpp
joystick_keyboard_emulator/: manifest.xml
joystick_keyboard_emulator/src/: teleop.py
kf_button_server/: mainpage.dox  manifest.xml
kf_button_server/launch/: button_server.launch
kf_button_server/nodes/: button_server.py
kf_button_server/src/: gps_template.kml  historyqueue.py
kf_launch/: alvar_tags.launch  log.launch  mainpage.dox  manifest.xml
kf_launch/node/: beat.py
kf_static_tfs/: mainpage.dox  manifest.xml  static_tfs.launch
kf_static_tfs/nodes/: publish_kf_tf.py
kf_yaw_kf/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kf_yaw_kf/launch/: compass.launch  compass2.launch  compass2cpp.launch
kf_yaw_kf/msg/: Compass.msg  CompassKF.msg
kf_yaw_kf/msg_gen/cpp/include/kf_yaw_kf/: Compass.h
kf_yaw_kf/msg_gen/lisp/: Compass.lisp  _package.lisp  _package_Compass.lisp  kf_yaw_kf-msg.asd
kf_yaw_kf/nodes/: kf_yaw_kf.py  kf_yaw_kf2.py
kf_yaw_kf/src/: kf_yaw_kf.cpp
kf_yaw_kf/src/kf_yaw_kf/msg/: _Compass.py
kf_yaw_kf/src/kf_yaw_kf/srv/: _SetMagOffset.py  __init__.py
kf_yaw_kf/srv/: SetMagOffset.srv
kf_yaw_kf/srv_gen/cpp/include/kf_yaw_kf/: SetMagOffset.h
kf_yaw_kf/srv_gen/lisp/: SetMagOffset.lisp  _package.lisp  _package_SetMagOffset.lisp  kf_yaw_kf-srv.asd
laser_safety/: mainpage.dox  manifest.xml
laser_safety/src/: collision_avoidance.cpp
launch/: axis_calibration_zoom1.yaml  axis_ptz.launch  base.launch  camera_launch.hidden  gps.launch  imu.launch  lidar.launch
radial_plan/: CMakeLists.txt  bd  mainpage.dox  manifest.xml  nodes  package.xml  path  pc  rviz_config.vcg  setup.py
radial_plan/cfg/: LocalPlan.cfg
radial_plan/include/radial_plan/: LocalPlan.h  RadialPlan.h
radial_plan/src/: LocalPlan.cpp  RadialPlan.cpp  live_lp.cpp  live_rp.cpp  test_lp.cpp  test_rp.cpp
sift_detect_holo/: CMakeLists.txt  mainpage.dox  manifest.xml
sift_detect_holo/cfg/: SiftDescript.cfg  VelConvert.cfg
sift_detect_holo/docs/: FollowLineConfig-usage.dox  FollowLineConfig.dox  FollowLineConfig.wikidoc  SiftDecriptConfig-usage.dox  SiftDecriptConfig.dox  SiftDecriptConfig.wikidoc
sift_detect_holo/launch/: sift_detect.launch
sift_detect_holo/scripts/: img_detect.py  img_detect_node.py  servo.py  servo_outliers.py  teleop.py  teleop_mux.py  teleop_servo.py  vel_convert.py
sift_detect_holo/src/sift_detect_holo/cfg/: FollowLineConfig.py  SiftDecriptConfig.py
sift_detect_holo/src/sift_detect_holo/msg/: __init__.py  _sift_keypoint.py  _sift_keypoints_array.py
sim_gps/: CMakeLists.txt  mainpage.dox  manifest.xml
sim_gps/launch/: launch_gps.launch
sim_gps/nodes/: sim_gps_imu_mag.py
sim_gps/src/: gpsnode.cpp
sim_motor/: CMakeLists.txt  manifest.xml
sim_motor/launch/: launch_motor.launch  launch_motor.launch~
sim_motor/src/: motornode.cpp  motornode.cpp~
sim_tasks/: CMakeLists.txt  mainpage.dox  manifest.xml
sim_tasks/cfg/: TaskAlignWithShore.cfg  TaskCalibrateCompass.cfg  TaskFindFinishLine.cfg  TaskFollowShore.cfg  TaskFollowShorePID.cfg  TaskGoTo.cfg  TaskGoToAngle.cfg  TaskJoinOtherShore.cfg  TaskReachOtherShore.cfg  TaskRotate.cfg  TaskSetHeading.cfg  TaskSetManual.cfg  TaskSetOrigin.cfg  TaskSetPTZ.cfg  TaskWaitForAuto.cfg
sim_tasks/include/sim_tasks/: SimTasksEnv.h  SubscriberStatistics.h
sim_tasks/launch/: button_server.launch  launch_a.launch  launch_all.launch  launch_all_VREP.launch  launch_boat_test.launch  launch_v.launch  launch_vrep.launch  test_all.launch  test_bags.launch
sim_tasks/missions/: calibrate_compass.py  debug_shore_RP.py  follow_island.py  follow_shore_RP.py  follow_shore_RP_sloppy.py  follow_shore_RP_sloppy_welltuned.py  follow_shore_island.py  follow_shore_rate.py  test_calib_compass.py  test_goto.py  test_goto_PID.py  test_min.py  test_patrol.py  test_patrol_zero.py  test_ptz.py  test_set_heading.py  test_shore.py  test_shore_RP.py  test_shore_only.py  test_violet.py
sim_tasks/src/: SimTasksEnv.cpp  task_server.cpp
sim_tasks/tasks/: TaskAlignWithShore.cpp  TaskAlignWithShore.h  TaskCalibrateCompass.cpp  TaskCalibrateCompass.h  TaskCheckReadiness.cpp  TaskCheckReadiness.h  TaskConstant.cpp  TaskConstant.h  TaskFindFinishLine.cpp  TaskFindFinishLine.h  TaskFollowShore.cpp  TaskFollowShore.h  TaskFollowShorePID.cpp  TaskFollowShorePID.h  TaskFollowShoreRP.cpp  TaskFollowShoreRP.h  TaskGoTo.cpp  TaskGoTo.h  TaskGoToAngle.cpp  TaskGoToAngle.h  TaskJoinOtherShore.cpp  TaskJoinOtherShore.h  TaskReachOtherShore.cpp  TaskReachOtherShore.h  TaskRecordFinishLine.cpp  TaskRecordFinishLine.h  TaskRotate.cpp  TaskRotate.h  TaskSetHeading.cpp  TaskSetHeading.h  TaskSetManual.cpp  TaskSetManual.h  TaskSetOrigin.cpp  TaskSetOrigin.h  TaskSetPTZ.cpp  TaskSetPTZ.h  TaskWaitForAuto.cpp  TaskWaitForAuto.h  TaskWaitForDistance.cpp  TaskWaitForDistance.h  (+2 more)
sim_tasks_cfg/: CMakeLists.txt  mainpage.dox  manifest.xml
sim_tasks_cfg/cfg/: TaskAlignWithShore.cfg  TaskCalibrateCompass.cfg  TaskCheckReadiness.cfg  TaskConstant.cfg  TaskFollowShore.cfg  TaskFollowShorePID.cfg  TaskFollowShoreRP.cfg  TaskGoTo.cfg  TaskGoToAngle.cfg  TaskReachOtherShore.cfg  TaskSetHeading.cfg  TaskSetManual.cfg  TaskSetOrigin.cfg  TaskSetPTZ.cfg  TaskWaitForAuto.cfg  TaskWaitForDistance.cfg  TaskWaitForROI.cfg
teleop_mux/: manifest.xml
teleop_mux/launch/: joy.launch  teleop.launch  teleop_mux.launch  teleop_mux_bt.launch  teleop_mux_vrep.launch
teleop_mux/src/: teleop.py  teleop_mux.py
