<package>
  <name>axis_exposure_control</name>
  <version>0.1.1</version>
  <description>
    A node controlling the brightness of the axis camera for exposure control.
  </description>
  <maintainer email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</maintainer>
  <license>BSD</license>

  <author email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>

</package>

