<package>
  <name>radial_plan</name>
  <version>0.1.1</version>
  <description>
    A library for local path planning
  </description>
  <maintainer email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</maintainer>
  <license>BSD</license>

  <author email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>libnabo</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>tf</run_depend>

</package>

